--- a/static/index.html
+++ b/static/index.html
@@ -154,7 +154,7 @@
 
 
 <div id="colorDIV" class="page-hd cl6 cl6_grey" permit="grey">
-    <p style=" color:#fff;   font-size: 25px;  font-weight: 200;" align="center">已在审批名单内</p>
+    <p style=" color:#fff;   font-size: 25px;  font-weight: 200;" align="center">已经请假离校</p>
 </div>
 
 
