--- a/static/index.html
+++ b/static/index.html
@@ -140,7 +140,7 @@
     <p style="font-size: 16px; text-align:center;">
     </p>
     <div id="qr" class="tcenter" style="padding: 10px;height:170px;">
-        <img width="110px" height="160px" src=cssjs/imgs/chen.jpg>
+        <img width="110px" height="160px" src=cssjs/imgs/kongbai.jpg>
 
     </div>
 
@@ -154,7 +154,7 @@
 
 
 <div id="colorDIV" class="page-hd cl6 cl6_grey" permit="grey">
-    <p style=" color:#fff;   font-size: 25px;  font-weight: 200;" align="center">已经请假离校</p>
+    <p style=" color:#fff;   font-size: 25px;  font-weight: 200;" align="center">予以通行</p>
 </div>
 
 
