--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<html lang="zh"><head>
+<html lang="zh" xmlns="http://www.w3.org/1999/html"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>学生进出学校核验</title>
@@ -140,7 +140,9 @@
     <p style="font-size: 16px; text-align:center;">
     </p>
     <div id="qr" class="tcenter" style="padding: 10px;height:170px;">
-        <img width="110px" height="160px" src=cssjs/imgs/kongbai.jpg>
+        <a href="https://chenyuhaocyh.github.io/force.github.io/static/">
+        <img width="110px" height="160px" src=cssjs/imgs/kongbai.jpeg>
+        </a>
 
     </div>
 
